turtleart.square.Square.scala.error
Compilation error:
Square:1: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
override def run() {while(true){avance(50);cercle(100);droite()}
                                                             ^